<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginFragment">

  <TextView
    android:padding="15dp"
    android:id="@+id/textview_first"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Welcome"
    android:textColor="@color/black"
    android:textSize="30sp"
    app:layout_constraintBottom_toTopOf="@+id/progressBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed" />

  <TextView
    android:id="@+id/errorMessage"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="@color/red"
    android:textStyle="bold"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@+id/email"
    app:layout_constraintTop_toBottomOf="@+id/progressBar"
    tools:text="@string/authentication_error_message"
    tools:visibility="visible" />

  <EditText
    android:id="@+id/email"
    android:inputType="textEmailAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    android:padding="15dp"
    app:layout_constraintBottom_toTopOf="@+id/password"
    app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

  <EditText
    android:id="@+id/password"
    android:hint="@string/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/login_button"
    app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:text="@string/login"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/password" />

  <ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:indeterminate="true"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@+id/errorMessage"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textview_first" />
</androidx.constraintlayout.widget.ConstraintLayout>