<resources>
  <string name="app_name">InstrumentalTesting</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="login">Login</string>
  <string name="Welcome">Welcome</string>
  <string name="invalid_input">invalid input</string>
  <string name="password">password</string>
  <string name="email">email</string>
  <string name="authentication_error_message">Invalid email or password. Please check and try again</string>
</resources>